grid-gap fix, tailwind classes had changed in v.2

--- a/components/markdown-styles.module.css
+++ b/components/markdown-styles.module.css
@@ -14,8 +14,9 @@
     @apply ml-8;
   } */
   /* remove this if RT "extra p" list rendering is ever fixed. -AW */
-  blockquote p {
-    @apply text-xl italic opacity-90;
+  blockquote > p {
+    @apply text-xl opacity-90;
+    font-style: italic;
     margin-bottom: 0.5em;
   }
 
